--- a/test/IronSharePoint.Framework.Test/IronSharePoint.Framework.Test.csproj
+++ b/test/IronSharePoint.Framework.Test/IronSharePoint.Framework.Test.csproj
@@ -29,6 +29,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="FluentAssertions">
       <HintPath>..\..\packages\FluentAssertions.2.0.1\lib\net45\FluentAssertions.dll</HintPath>
@@ -56,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Administration\HiveSetup_Fixture.cs" />
     <Compile Include="Administration\IronHiveRegistry_Fixture.cs" />
     <Compile Include="Dummy.cs" />
     <Compile Include="Hive\OrderedHiveList_Fixture.cs" />
@@ -65,6 +72,7 @@
     <Compile Include="Util\StringExtensions_Fixture.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="key.snk" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
