--- a/test/IronSharePoint.Framework.Test/IronSharePoint.Framework.Test.csproj
+++ b/test/IronSharePoint.Framework.Test/IronSharePoint.Framework.Test.csproj
@@ -63,13 +63,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Administration\HiveSetupCollection_Fixture.cs" />
     <Compile Include="Administration\HiveSetup_Fixture.cs" />
     <Compile Include="Administration\HiveRegistry_Fixture.cs" />
-    <Compile Include="Dummy.cs" />
     <Compile Include="Hive\OrderedHiveList_Fixture.cs" />
     <Compile Include="Hive\PhysicalHive_Fixture.cs" />
     <Compile Include="Hive\SPDocumentHive_Fixture.cs" />
+    <Compile Include="IronScriptHost_Fixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\EnumerableExtensions_Fixture.cs" />
     <Compile Include="Util\StringExtensions_Fixture.cs" />
   </ItemGroup>
   <ItemGroup>
