Added i18n gem and fixed active_support require for new version

--- a/src/IronSharePoint.IronRuby/IronSharePoint.IronRuby.csproj
+++ b/src/IronSharePoint.IronRuby/IronSharePoint.IronRuby.csproj
@@ -683,6 +683,7 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\activesupport-3.0.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\active_support-3.0.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\haml-4.0.0.gem" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\i18n-0.6.4.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\json_pure-1.7.7.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\log4r-1.1.10.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\slim-1.3.6.gem" />
@@ -920,6 +921,101 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\haml-4.0.0\lib\haml\template\plugin.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\haml-4.0.0\lib\haml\util.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\haml-4.0.0\lib\haml\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\CHANGELOG.textile" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\ci\Gemfile.no-rails" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\ci\Gemfile.no-rails.lock" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\ci\Gemfile.rails-2.3.x" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\ci\Gemfile.rails-2.3.x.lock" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\ci\Gemfile.rails-3.x" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\ci\Gemfile.rails-3.x.lock" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\base.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\cache.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\cascade.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\chain.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\fallbacks.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\flatten.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\gettext.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\interpolation_compiler.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\key_value.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\memoize.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\metadata.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\pluralization.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\simple.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\transliterator.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\config.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\core_ext\hash.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\core_ext\kernel\surpress_warnings.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\core_ext\string\interpolate.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\exceptions.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\gettext.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\gettext\helpers.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\gettext\po_parser.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\interpolate\ruby.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\locale.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\locale\fallbacks.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\locale\tag.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\locale\tag\parents.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\locale\tag\rfc4646.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\locale\tag\simple.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests\basics.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests\defaults.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests\interpolation.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests\link.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests\localization.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests\localization\date.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests\localization\date_time.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests\localization\procs.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests\localization\time.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests\lookup.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests\pluralization.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\tests\procs.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\MIT-LICENSE" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\README.textile" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\all.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\api\all_features_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\api\cascade_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\api\chain_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\api\fallbacks_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\api\key_value_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\api\memoize_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\api\override_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\api\pluralization_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\api\simple_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\backend\cache_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\backend\cascade_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\backend\chain_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\backend\exceptions_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\backend\fallbacks_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\backend\interpolation_compiler_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\backend\key_value_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\backend\memoize_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\backend\metadata_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\backend\pluralization_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\backend\simple_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\backend\transliterator_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\core_ext\hash_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\core_ext\string\interpolate_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\gettext\api_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\gettext\backend_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\i18n\exceptions_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\i18n\interpolate_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\i18n\load_path_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\i18n_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\locale\fallbacks_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\locale\tag\rfc4646_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\locale\tag\simple_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\run_all.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\test_data\locales\de.po" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\test_data\locales\en.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\test_data\locales\en.yml" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\test_data\locales\invalid\empty.yml" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\test_data\locales\invalid\syntax.yml" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\test_data\locales\plurals.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\test\test_helper.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\json_pure-1.7.7\data\example.json" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\json_pure-1.7.7\diagrams\.keep" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\json_pure-1.7.7\ext\json\ext\generator\depend" />
@@ -1082,6 +1178,7 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\activesupport-3.0.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\active_support-3.0.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\haml-4.0.0.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\i18n-0.6.4.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\json_pure-1.7.7.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\log4r-1.1.10.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\slim-1.3.6.gemspec" />
