Gave the hive implementations better names

--- a/src/IronSharePoint.Framework/IronSharePoint.Framework.csproj
+++ b/src/IronSharePoint.Framework/IronSharePoint.Framework.csproj
@@ -99,8 +99,8 @@
     <Compile Include="Administration\HiveRegistry.cs" />
     <Compile Include="Administration\HiveSetupCollection.cs" />
     <Compile Include="Diagnostics\IronDiagnosticService.cs" />
-    <Compile Include="Hives\OrderedHiveList.cs" />
-    <Compile Include="Hives\PhysicalHive.cs" />
+    <Compile Include="Hives\HiveComposite.cs" />
+    <Compile Include="Hives\DirectoryHive.cs" />
     <Compile Include="Hives\SPDocumentHive.cs" />
     <Compile Include="IHive.cs" />
     <Compile Include="IIronControl.cs" />
